cartopy/docs/v0.19/_sources/gallery/miscellanea/favicon.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/miscellanea/favicon.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_miscellanea_favicon.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_miscellanea_favicon.py:


Cartopy Favicon
---------------

The actual code to generate cartopy's favicon.

.. GENERATED FROM PYTHON SOURCE LINES 8-42



.. image:: /gallery/miscellanea/images/sphx_glr_favicon_001.png
    :alt: favicon
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    findfont: Font family ['Bitstream Vera Sans'] not found. Falling back to DejaVu Sans.






|

.. code-block:: default

    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt
    import matplotlib.textpath
    import matplotlib.patches
    from matplotlib.font_manager import FontProperties
    import numpy as np


    def main():
        fig = plt.figure(figsize=[8, 8])
        ax = fig.add_subplot(1, 1, 1, projection=ccrs.SouthPolarStereo())

        ax.coastlines()
        ax.gridlines()
        ax.stock_img()

        # Generate a matplotlib path representing the character "C".
        fp = FontProperties(family='Bitstream Vera Sans', weight='bold')
        logo_path = matplotlib.textpath.TextPath((-4.5e7, -3.7e7),
                                                 'C', size=1, prop=fp)

        # Scale the letter up to an appropriate X and Y scale.
        logo_path._vertices *= np.array([103250000, 103250000])

        # Add the path as a patch, drawing black outlines around the text.
        patch = matplotlib.patches.PathPatch(logo_path, facecolor='white',
                                             edgecolor='black', linewidth=10,
                                             transform=ccrs.SouthPolarStereo())
        ax.add_patch(patch)
        plt.show()


    if __name__ == '__main__':
        main()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  2.569 seconds)


.. _sphx_glr_download_gallery_miscellanea_favicon.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: favicon.py <favicon.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: favicon.ipynb <favicon.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
